@@ -1,7 +1,7 @@
-.TH "CHMSEE" "1" 
-.SH "NAME" 
+.TH "CHMSEE" "1"
+.SH "NAME"
 chmsee \(em A chm file viewer written in GTK
-.SH "SYNOPSIS" 
+.SH "SYNOPSIS"
 .B chmsee
 [\fIFILE\fR]
 .PP
@@ -10,23 +10,22 @@ chmsee \(em A chm file viewer written in GTK
 .PP
 .B chmsee
 \-\-version
-.SH "DESCRIPTION" 
+.SH "DESCRIPTION"
 .B chmsee
-is a viewer for Compiled HTML Help (CHM) files. It, can show the 
+is a viewer for Compiled HTML Help (CHM) files. It, can show the
 contents tree if one is available, print the current page and do the
 usual history stunts. It allows you to change fonts, use bookmarks.
-.SH "SEE ALSO" 
-.PP 
-xchm (1). 
-.SH "AUTHOR" 
-.PP 
-This manual page was written by LI Daobing <lidaobing@gmail.com> for 
-the \fBDebian\fP system (but may be used by others).  Permission is 
-granted to copy, distribute and/or modify this document under 
-the terms of the GNU General Public License, Version 2 any  
-later version published by the Free Software Foundation. 
- 
-.PP 
-On Debian systems, the complete text of the GNU General Public 
-License can be found in /usr/share/common-licenses/GPL. 
- 
+.SH "SEE ALSO"
+.PP
+xchm (1).
+.SH "AUTHOR"
+.PP
+This manual page was written by LI Daobing <lidaobing@gmail.com> for
+the \fBDebian\fP system (but may be used by others).  Permission is
+granted to copy, distribute and/or modify this document under
+the terms of the GNU General Public License, Version 2 any
+later version published by the Free Software Foundation.
+
+.PP
+On Debian systems, the complete text of the GNU General Public
+License can be found in /usr/share/common-licenses/GPL.
