@@ -52,6 +52,7 @@ void         cs_book_set_model(CsBook *, CsChmfile *);
 
 void         cs_book_new_tab_with_fulluri(CsBook *, const gchar *);
 void         cs_book_load_url(CsBook *, const gchar *);
+gboolean     cs_book_can_close_tab(CsBook *);
 void         cs_book_close_current_tab(CsBook *);
 void         cs_book_reload_current_page(CsBook *);
 
